refactor: convert home page to server component with dynamic article loading

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,71 +1,71 @@
 ---
-title: 欢迎使用 Hello ADP
-description: 从零开始学习腾讯云智能体开发平台！
+title: Welcome to Hello ADP
+description: Learn the Tencent Cloud Agent Development Platform from scratch.
 enableComments: true
 author: "Steven Lynn"
 github_username: "stvlynn"
 x_username: "Stv_Lynn"
 ---
 
-## 这是什么？
+## What Is This?
 
-这是 FirstLab 推出的教程项目，介绍腾讯云智能体开发平台（ADP）的基础知识。它提供了我们平台的概述，作为进一步探索和实践学习的起点。
+Hello ADP is a tutorial project created by FirstLab to introduce the fundamentals of the Tencent Cloud Agent Development Platform (ADP). It offers a friendly overview of the platform and points you toward hands-on examples that help you build confidence step by step.
 
-浏览教程，跟随示例，开始您的 ADP 掌握之旅！
+Browse the guides, follow the samples, and start your ADP journey today.
 
-### 👋 加入我们！
+### 👋 Stay Connected
 
 <Cards>
   <Card 
     icon={<i className="ri-discord-fill ri-lg" />} 
     href="https://discord.gg/PwZDHH4mv3" 
-    title="Discord 频道"
+    title="Discord Community"
   >
-    加入我们的 Discord 社区，了解更多关于 ADP 的信息。
+    Join our Discord server for the latest ADP updates and discussions.
   </Card>
   <Card 
     icon={<i className="ri-github-fill ri-lg" />} 
     href="https://github.com/stvlynn/hello-adp" 
-    title="GitHub 仓库"
+    title="GitHub Repository"
   >
-    为本项目点一个 star ⭐
+    Star the project and follow along with new examples.
   </Card>
 </Cards>
 
-## 什么是腾讯云智能体开发平台（ADP）？
+## What Is the Tencent Cloud Agent Development Platform?
 
-腾讯云智能体开发平台（Tencent Cloud Agent Development Platform，简称 ADP）是腾讯云推出的企业级智能体开发平台，深度整合 LLM+RAG 增强检索、自动化工作流、多 Agent 协作架构等核心能力，助力企业高效搭建稳定、安全、符合业务场景的智能体应用。
+The Tencent Cloud Agent Development Platform (ADP) is an enterprise-grade system for building intelligent agents. It brings together LLM + RAG retrieval, automated workflows, and multi-agent collaboration so teams can deliver reliable, secure, business-ready solutions faster.
 
-### 平台核心优势
+### Platform Highlights
 
-**领先的智能体对话效果**
-- 内置行业实践流程和领先的 RAG 算法
-- 支持导入文档/问答对，让智能体对接企业多模态知识
-- 画布式灵活编排工作流，可快速接入企业系统 API
+**Industry-leading conversational quality**
+- Built-in best-practice flows paired with advanced RAG algorithms
+- Connect enterprise knowledge bases, including multimodal assets, with ease
+- Visual workflow canvas lets you plug in existing enterprise APIs quickly
 
-**全面的智能体开发框架**
-- 提供 LLM+RAG、Multi-agent、Workflow 等多种开发框架
-- 支持应用配置-调试-评测-发布一站式工具链
-- 降低智能体构建门槛，提升开发效率
+**Comprehensive development toolkit**
+- Supports LLM + RAG, multi-agent, and workflow-based architectures
+- Provides an end-to-end toolchain for configuration, debugging, evaluation, and launch
+- Lowers the barrier to entry while improving iteration speed
 
-**丰富的开发资源库**
-- 预置精选官方插件及 MCP 插件
-- 支持智能文档解析、多轮改写、embedding 等能力
-- 提供智能体开发所需的核心技术组件
+**Rich resource library**
+- Ships with curated official plugins plus the full MCP plugin ecosystem
+- Covers intelligent document parsing, iterative rewriting, embeddings, and more
+- Gives you the core building blocks required for production-ready agents
 
-### 主要应用场景
+### Where Can You Use It?
 
-**智能客服**
-基于腾讯云行业大模型，提供垂直领域的专业化智能客服能力，实现知识生产效率、问题覆盖率、回答准确率跨越式提升。
+**Intelligent customer service**
+Leverage Tencent Cloud domain models to deliver highly specialized customer support. Boost knowledge production, coverage, and answer accuracy all at once.
 
-**企业知识库问答助手**
-支持企业级知识库搜索和智能问答，对多模态知识进行高效处理、分析、检索、问答，助力企业实现知识库数智化服务升级。
+**Enterprise knowledge assistants**
+Search and converse over enterprise knowledge bases with multimodal content comprehension, analysis, retrieval, and Q&A—perfect for smart documentation portals.
 
-**车载助手**
-结合车载系统特点，提供个性化知识问答服务，支持复杂汽车操作手册快速解析及检索，实现拟人化车内人机交互。
+**In-vehicle assistants**
+Blend with automotive systems to provide contextual answers, interpret manuals, and power natural in-car experiences through voice or touch.
 
-## 下一步是什么？
+## What’s Next?
 
 <Cards>
-  <Card title="快速开始" href="./docs/quickstart" />
-</Cards> 
+  <Card title="Get Started" href="./docs/quickstart" />
+</Cards>
