--- a/content/docs/others/adp-ui.mdx
+++ b/content/docs/others/adp-ui.mdx
@@ -1,81 +1,81 @@
 ---
-title: 把应用发布为网页
-description: 如何在 Vercel 部署腾讯云智能体 chatbot 前端
+title: Publish Your App as a Web Page
+description: Deploy the Tencent Cloud ADP chatbot frontend on Vercel.
 enableComments: true
 author: "Steven Lynn"
 github_username: "stvlynn"
 x_username: "stv_lynn"
 ---
 
-# 腾讯云智能体平台 ADP Chatbot 前端部署教程
+# Tencent Cloud ADP Chatbot Frontend Deployment Guide
 
-本项目是[腾讯云智能体开发平台（Tencent Cloud Agent Development Platform，Tencent Cloud ADP）](https://lke.cloud.tencent.com)的第三方 Chatbot 前端。
+This project provides a third-party chatbot frontend for the [Tencent Cloud Agent Development Platform (ADP)](https://lke.cloud.tencent.com).
 
-它基于 React 构建，提供与腾讯云智能体后端服务的实时聊天交互功能，支持 WebSocket 和 SSE 两种连接方式，具备 Token 管理和 AI 对话能力。
+It is built with React, offers real-time chat with the ADP backend, supports both WebSocket and SSE transport, and includes token management along with AI conversation capabilities.
 
-## 🚀 快速部署
+## 🚀 Quick Deployment
 
-### Vercel 一键部署
+### One-click deploy on Vercel
 
-点击下方按钮，即可一键部署到 Vercel：
+Click below to clone and deploy instantly:
 
 [![Deploy with Vercel](https://vercel.com/button)](https://vercel.com/new/clone?repository-url=https%3A%2F%2Fgithub.com%2Fstvlynn%2FADP-Chat-UI)
 
-配置环境变量（见下方）后，点击 Deploy 即可开始使用。
+After setting environment variables (see below), press **Deploy** to go live.
 
-### 手动部署到 Vercel
+### Manual deployment to Vercel
 
-1. 将项目推送到你的 GitHub 仓库
-2. 登录 [Vercel](https://vercel.com/) 并导入你的仓库
-3. 在项目设置中，配置环境变量（见下方）
-4. 点击 "Deploy" 开始部署
+1. Push the project to your own GitHub repository.
+2. Log in to [Vercel](https://vercel.com/) and import the repo.
+3. Configure environment variables in the project settings (details below).
+4. Click **Deploy**.
 
-## 🔧 环境变量配置
+## 🔧 Environment variables
 
-部署时需要配置以下环境变量：
+Set the following variables during deployment:
 
-- `TENCENT_SECRET_ID`: 你的腾讯云 API 密钥 ID
-- `TENCENT_SECRET_KEY`: 你的腾讯云 API 密钥 Key
-- `TENCENT_APP_ID`: 你的腾讯云应用 ID
+- `TENCENT_SECRET_ID`: Tencent Cloud API Secret ID
+- `TENCENT_SECRET_KEY`: Tencent Cloud API Secret Key
+- `TENCENT_APP_ID`: Tencent Cloud App ID
 
-### 如何获取环境变量
+### How to obtain the values
 
-:::info[获取步骤]
-1. 进入 [API 密钥管理](https://console.cloud.tencent.com/cam/capi)
-2. 新建密钥
-3. 获取 API 密钥 ID 和 API 密钥 Key
-4. 在 [应用管理](https://console.cloud.tencent.com/lke/app) 中创建应用
-5. 进入 [腾讯云智能体平台](https://lke.cloud.tencent.com) -> 应用 -> 应用发布 -> API 管理 -> 复制 AppKey 获取应用 ID
+:::info[Steps]
+1. Open [API Key Management](https://console.cloud.tencent.com/cam/capi).
+2. Create a new key pair.
+3. Copy the Secret ID and Secret Key.
+4. Visit [App Management](https://console.cloud.tencent.com/lke/app) and create an app.
+5. In [Tencent Cloud ADP](https://lke.cloud.tencent.com) go to **Application → Publish → API Management** and copy the AppKey (App ID).
 :::
 
-在 Vercel 项目设置中添加这些环境变量：
+Add the variables in your Vercel project settings:
 
-![Vercel 环境变量配置](https://s2.loli.net/2025/08/11/WtLOHNdaE37h62j.png)
+![Vercel environment configuration](https://s2.loli.net/2025/08/11/WtLOHNdaE37h62j.png)
 
-## 🌐 作为网页嵌入
+## 🌐 Embed on a website
 
-### 方式一：作为 iframe 内嵌
+### Option 1: Inline iframe
 
-将部署后的地址直接以 iframe 引入：
+Embed the deployed URL directly:
 
 ```html
 <iframe
-  src="https://adp-chat-ui.vercel.app" //此处替换为你的部署地址
+  src="https://adp-chat-ui.vercel.app" <!-- Replace with your deployment URL -->
   style="width: 100%; height: 600px; border: 0;"
   allow="clipboard-write *; microphone; camera"
 ></iframe>
 ```
 
-你可以根据页面需要调整宽高与样式。
+Adjust the size and styling as needed.
 
-### 方式二：用 script 动态注入悬浮窗（简易版）
+### Option 2: Lightweight floating widget
 
-在任意网页底部加入如下脚本，即可生成一个固定在右下角的聊天悬浮窗：
+Append the following script to any page to spawn a fixed widget in the lower-right corner:
 
 ```html
 <script>
 (function () {
-  var url = 'https://adp-chat-ui.vercel.app'; // 你的部署地址
+  var url = 'https://adp-chat-ui.vercel.app'; // Replace with your deployment URL
   var iframe = document.createElement('iframe');
   iframe.src = url;
   iframe.style.cssText = [
@@ -96,64 +96,64 @@ x_username: "stv_lynn"
 </script>
 ```
 
-### 方式三：一行脚本（推荐）
+### Option 3: Single-line embed (recommended)
 
-本仓库已在 `public/` 提供优化的 `embed.min.js`，部署后可通过一行脚本接入。特性包括：
+The repository includes an optimized `embed.min.js` under `public/`. After deployment you can integrate the widget with a single script tag. Highlights:
 
-- 🎨 **与主应用配色一致**：使用 teal 色系 (#0d9488)
-- ✨ **流畅动画效果**：展开/收起带 0.2s 缓动动画
-- 🎯 **优化图标设计**：28x28 像素清晰聊天图标
-- 🧹 **简洁界面**：无冗余标题，专注聊天体验
-- 💾 **状态记忆**：localStorage 保存展开/最小化状态
+- 🎨 **Matches the primary teal palette (#0d9488)**
+- ✨ **Smooth 0.2s easing for open/close animations**
+- 🎯 **Pixel-perfect 28×28 chat icon**
+- 🧹 **Minimal UI with no redundant chrome**
+- 💾 **Remembers open/minimized state via localStorage**
 
-#### 最简接入
+#### Minimal usage
 
 ```html
 <script>
   window.adpChatbotConfig = {
-    baseUrl: 'https://adp-chat-ui.vercel.app' // 替换为你的部署域名
+    baseUrl: 'https://adp-chat-ui.vercel.app' // Replace with your domain
   };
 </script>
 <script src="https://adp-chat-ui.vercel.app/embed.min.js" defer></script>
 ```
 
-#### 完整配置示例
+#### Full configuration example
 
 ```html
 <script>
   window.adpChatbotConfig = {
-    baseUrl: 'https://adp-chat-ui.vercel.app', // 你的部署域名
-    width: 380,           // 聊天窗宽度
-    height: 600,          // 聊天窗高度
-    right: 24,            // 距离右边距离
-    bottom: 24,           // 距离底部距离
-    bubbleColor: '#0d9488', // 气泡按钮颜色（默认 teal 色）
-    iframePath: '/',      // 聊天页面路径
-    allow: 'clipboard-write *; microphone; camera' // iframe 权限
+    baseUrl: 'https://adp-chat-ui.vercel.app', // Your deployment
+    width: 380,
+    height: 600,
+    right: 24,
+    bottom: 24,
+    bubbleColor: '#0d9488',
+    iframePath: '/',
+    allow: 'clipboard-write *; microphone; camera'
   };
 </script>
 <script src="https://adp-chat-ui.vercel.app/embed.min.js" defer></script>
 ```
 
-#### 调用控制
+#### Programmatic control
 
 ```js
-// 在外部页面中可随时控制：
-window.ADPChatbot.open();   // 打开
-window.ADPChatbot.close();  // 最小化
-window.ADPChatbot.toggle(); // 切换
+// Control the widget from the host page
+window.ADPChatbot.open();   // Expand
+window.ADPChatbot.close();  // Minimize
+window.ADPChatbot.toggle(); // Toggle state
 ```
 
-#### 样式自定义
+#### Custom styling
 
 ```html
 <style>
-  /* 自定义气泡按钮颜色 */
+  /* Override bubble color */
   [data-adp-chatbot="bubble"] {
     background-color: #your-color !important;
   }
   
-  /* 自定义聊天窗尺寸 */
+  /* Override widget size */
   [data-adp-chatbot="wrap"] {
     width: 400px !important;
     height: 650px !important;
@@ -161,38 +161,39 @@ window.ADPChatbot.toggle(); // 切换
 </style>
 ```
 
-:::warning[注意事项]
-- 该嵌入方式不会暴露 `TENCENT_SECRET_ID/KEY` 等敏感信息：iframe 内的应用会自行调用其同域的 `/getDemoToken` 接口完成鉴权
-- 确保部署域名允许被其它站点 iframe：不要设置 `X-Frame-Options: DENY`，若使用 CSP，请为 `frame-ancestors` 配置允许的上级域名
-- 若目标站点使用严格的 CSP，请为 `script-src`/`frame-src` 增加你的部署域名
-- 高级联动（如页面与聊天窗的双向通信）可通过 `postMessage` 实现
+:::warning[Notes]
+- The embed never exposes `TENCENT_SECRET_ID/KEY`; the iframe calls its own `/getDemoToken` endpoint on the same origin for auth.
+- Allow your deployment domain to be framed by other sites (`X-Frame-Options` should not be `DENY`). If CSP is enabled, permit the parent domain via `frame-ancestors`.
+- Strict CSP policies must list your deployment under `script-src` and `frame-src`.
+- For advanced integrations, exchange messages via `postMessage` between the host page and the iframe.
 :::
 
-## 🧪 本地开发与测试
+## 🧪 Local development and testing
 
-### 环境准备
+### Prepare the environment
 
-1. 确保已安装 [Node.js](https://nodejs.org/) (推荐使用 LTS 版本)
-2. 克隆项目到本地：
+1. Install [Node.js](https://nodejs.org/) (LTS recommended).
+2. Clone the project:
 
    ```bash
    git clone https://github.com/stvlynn/ADP-Chat-UI.git
    cd ADP-Chat-UI
    ```
-3. 安装依赖：
+3. Install dependencies:
+
    ```bash
    npm install
    ```
 
-### 配置环境变量
+### Configure environment variables
 
-1. 在项目根目录下复制 `.env.local.example` 文件为 `.env.local` 文件
+1. Copy `.env.local.example` to `.env.local`:
 
 ```bash
 cp .env.local.example .env.local
 ```
 
-2. 添加以下环境变量：
+2. Populate the file:
 
    ```bash
    TENCENT_SECRET_ID=your_secret_id
@@ -200,40 +201,40 @@ cp .env.local.example .env.local
    TENCENT_APP_ID=your_app_id
    ```
 
-### 启动开发服务器
+### Run the dev server
 
 ```bash
 npm run dev
 ```
 
-开发服务器将在 `http://localhost:9091` 启动。
+The app runs on `http://localhost:9091` by default.
 
-### 构建生产版本
+### Build for production
 
 ```bash
 npm run build
 ```
 
-构建后的文件将位于 `dist/` 目录。
+The output is generated in the `dist/` folder.
 
-## 🔍 故障排除
+## 🔍 Troubleshooting
 
-### 常见问题
+### Common issues
 
-1. **部署失败**
-   - 检查环境变量是否正确配置
-   - 确保腾讯云密钥有效且有权限访问 ADP 服务
+1. **Deployment fails**
+   - Verify environment variables are present and accurate.
+   - Make sure the Tencent Cloud credentials have permission to access ADP services.
 
-2. **聊天功能不工作**
-   - 验证 `TENCENT_APP_ID` 是否正确
-   - 检查腾讯云智能体应用是否已发布
+2. **Chatbot does not respond**
+   - Confirm `TENCENT_APP_ID` is correct.
+   - Ensure the ADP application has been published.
 
-3. **嵌入后样式问题**
-   - 确认目标站点没有阻止 iframe
-   - 检查 CSP 策略是否允许加载外部资源
+3. **Styling breaks after embedding**
+   - Check that the host site allows iframes.
+   - Review CSP rules to confirm external resources are permitted.
 
-### 调试技巧
+### Debug tips
 
-- 在浏览器开发者工具中查看网络请求
-- 检查控制台是否有错误信息
-- 使用 Vercel 的部署日志排查问题
+- Inspect network requests in browser DevTools.
+- Review console logs for runtime errors.
+- Use Vercel deployment logs for additional clues.
