--- a/content/docs/workflow/node/parameter-extraction.zh.mdx
+++ b/content/docs/workflow/node/parameter-extraction.zh.mdx
@@ -9,6 +9,10 @@ author: Steven Lynn
 
 参数提取节点属于信息收集类节点，通过与用户进行多轮对话来收集参数。这些参数可以是名词、地名、手机号码、医院名称等各种业务相关信息。工作流执行至该节点时会中断并与用户交互，直到收集到必需的参数。
 
+## 最佳实践
+
+
+
 ## 操作说明
 
 ### 输入变量
