--- a/content/docs/workflow/playground/podcast.zh.mdx
+++ b/content/docs/workflow/playground/podcast.zh.mdx
@@ -5,6 +5,7 @@ enableComments: true
 author: "Steven Lynn"
 github_username: "stvlynn"
 x_username: "Stv_Lynn"
+demo_url: https://podcast-adp.vercel.app/
 ---
 
 ⬇️ 先睹为快
@@ -16,3 +17,249 @@ x_username: "Stv_Lynn"
   style={{ width: '100%', height: '600px', border: '0' }}
   allow="clipboard-write *; microphone; camera"
 ></iframe>
+
+
+## 项目概述
+
+本文介绍一个基于工作流的智能播客生成系统的设计与实现。该系统通过集成大语言模型和语音合成技术，实现了从主题输入到音频输出的全流程自动化。项目采用模块化设计，支持异步处理和状态追踪，为内容创作者提供了高效的播客制作解决方案。
+
+## 业务背景
+
+播客内容制作传统流程包含文案撰写、音频录制、后期编辑等多个环节，通常需要专业设备和技术人员支持。对于个人创作者而言，这些要求构成了明显的进入门槛。同时，持续的内容输出需要大量时间投入，限制了播客内容的生产效率。
+
+本项目旨在通过技术手段简化播客制作流程。系统允许用户仅输入一个主题，即可自动生成相应的文案并转换为音频文件。这种自动化方案能够显著降低内容创作的时间成本和技术门槛。
+
+## 技术架构
+
+系统采用基于工作流的架构设计，将播客生成过程分解为多个独立节点，通过工作流引擎协调各节点的执行。主要技术组件包括DeepSeek-v3大语言模型负责文案生成，腾讯云TTS API提供语音合成服务，Python处理数据转换和流程控制。
+
+<Mermaid
+  chart="
+graph TB
+                %% 用户层
+                User[用户界面<br/>Web Interface]
+                
+                %% 工作流引擎层
+                WFEngine[工作流引擎<br/>Workflow Engine]
+                
+                %% 参数管理
+                ParamMgr[参数管理器<br/>Parameter Manager]
+                SecretStore[(密钥存储<br/>Secret Store)]
+                
+                %% 核心处理模块
+                LLMNode[文案生成节点<br/>LLM Node]
+                TTSNode[语音合成节点<br/>TTS Node]
+                PollingNode[轮询控制节点<br/>Polling Controller]
+                DataProc[数据处理节点<br/>Data Processor]
+                
+                %% 外部服务
+                DeepSeek[DeepSeek-v3<br/>大语言模型]
+                TencentTTS[腾讯云TTS<br/>语音合成服务]
+                
+                %% 存储
+                Cache[(缓存系统<br/>Cache)]
+                ResultStore[(结果存储<br/>Result Storage)]
+                
+                %% 子工作流
+                SubWF[子工作流<br/>状态查询]
+                
+                %% 数据流连接
+                User -->|1.输入主题| WFEngine
+                WFEngine -->|2.提取参数| ParamMgr
+                ParamMgr -->|3.获取密钥| SecretStore
+                
+                WFEngine -->|4.调度执行| LLMNode
+                LLMNode -->|5.请求生成| DeepSeek
+                DeepSeek -->|6.返回文案| LLMNode
+                LLMNode -->|7.缓存文案| Cache
+                
+                WFEngine -->|8.用户确认| User
+                User -->|9.确认生成音频| WFEngine
+                
+                WFEngine -->|10.调度执行| TTSNode
+                TTSNode -->|11.提交任务| TencentTTS
+                TencentTTS -->|12.返回任务ID| TTSNode
+                
+                WFEngine -->|13.启动轮询| PollingNode
+                PollingNode -->|14.调用子工作流| SubWF
+                SubWF -->|15.查询状态| TencentTTS
+                TencentTTS -->|16.返回状态| SubWF
+                SubWF -->|17.返回结果| PollingNode
+                
+                PollingNode -->|18.提取URL| DataProc
+                DataProc -->|19.处理结果| ResultStore
+                ResultStore -->|20.返回链接| User
+                
+                %% 样式定义
+                classDef userStyle fill:#e3f2fd,stroke:#1976d2,stroke-width:2px
+                classDef engineStyle fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px
+                classDef nodeStyle fill:#fff3e0,stroke:#f57c00,stroke-width:2px
+                classDef externalStyle fill:#e8f5e9,stroke:#388e3c,stroke-width:2px
+                classDef storageStyle fill:#fce4ec,stroke:#c2185b,stroke-width:2px
+                
+                class User userStyle
+                class WFEngine,SubWF engineStyle
+                class ParamMgr,LLMNode,TTSNode,PollingNode,DataProc nodeStyle
+                class DeepSeek,TencentTTS externalStyle
+                class SecretStore,Cache,ResultStore storageStyle
+"
+/>
+
+
+## 核心功能实现
+
+### 参数管理机制
+
+系统启动时首先执行参数提取，获取三个必需参数：腾讯云API的SecretId和SecretKey，以及用户输入的播客主题。
+
+参数管理采用验证前置策略，确保所有必需参数都已正确提供后才允许工作流继续执行。
+
+
+
+### 文案生成模块
+
+文案生成是系统的核心功能之一。模块使用DeepSeek-v3模型，通过精心设计的提示词引导模型生成符合播客风格的内容。提示词模板明确指定了输出要求，包括内容结构、语言风格和篇幅限制。
+
+![image.png](https://s2.loli.net/2025/09/25/zR3kYl2I9hLXuTM.png)
+
+提示词如下：
+```
+(系统提示词)
+你是一个播客文案小助手，可以根据用户提供的主题，生成一段适合个人播客的吸引人的文案。请确保文案内容清晰、有趣且与主题紧密相关，同时注意语言风格符合播客的定位和受众喜好。
+
+---
+
+（用户提示词）
+{{UserQuery}}
+```
+
+温度参数设置为0.6，这个值是经过多次实验确定的。较低的温度值会使生成内容过于保守，缺乏创新性；较高的温度值则可能导致内容发散，偏离主题。最大token数设置为4000，足以容纳大部分播客文案的篇幅需求。
+
+生成完成后，系统将文案展示给用户进行确认。这个交互环节的设计考虑了用户的控制需求，允许用户在继续音频生成前评估文案质量。如果文案不符合预期，用户可以选择退出流程，避免不必要的资源消耗。
+
+### 语音合成处理
+
+当用户确认生成音频后，系统调用腾讯云TTS API进行语音合成。由于长文本语音合成是一个耗时操作，系统采用异步处理模式。首先提交合成任务获取任务ID，然后通过轮询机制查询任务状态，直到获得音频文件的下载链接。
+
+<Mermaid
+  chart={`
+  sequenceDiagram
+    participant U as 用户界面
+    participant WF as 工作流引擎
+    participant TTS as TTS节点
+    participant API as 腾讯云TTS API
+    participant P as 轮询控制器
+    participant SW as 子工作流
+    participant DP as 数据处理器
+
+    U->>WF: 确认生成音频
+    WF->>TTS: 执行语音合成任务
+    
+    rect rgb(240, 240, 255)
+        note over TTS,API: 任务提交阶段
+        TTS->>API: POST /CreateTtsTask<br/>{text: "播客文案内容"}
+        API-->>TTS: 200 OK<br/>{taskId: "task_12345"}
+        TTS-->>WF: 返回任务ID
+    end
+    
+    WF->>U: 显示处理提示<br/>"音频生成中，约需30秒..."
+    
+    rect rgb(255, 240, 240)
+        note over P,API: 轮询查询阶段
+        WF->>P: 启动轮询流程<br/>(taskId, credentials)
+        
+        loop 条件: resultURL为空
+            P->>SW: 执行状态查询
+            SW->>API: POST /DescribeTtsTaskStatus<br/>{taskId: "task_12345"}
+            
+            alt 任务处理中
+                API-->>SW: {status: 1, resultUrl: null}
+                SW-->>P: 返回空URL
+                P->>P: 等待间隔<br/>(动态调整)
+            else 任务完成
+                API-->>SW: {status: 2, resultUrl: "https://..."}
+                SW-->>P: 返回音频URL
+                note over P: 退出轮询循环
+            else 任务失败
+                API-->>SW: {status: 3, errorMsg: "..."}
+                SW-->>P: 返回错误信息
+                P->>WF: 触发异常处理
+            end
+        end
+    end
+    
+    rect rgb(240, 255, 240)
+        note over P,U: 结果处理阶段
+        P->>DP: 提取有效URL<br/>(轮询结果数组)
+        DP->>DP: 遍历数组<br/>查找非空URL
+        DP-->>WF: 返回音频链接
+        WF->>U: 展示结果<br/>音频链接 + 文案内容
+    end
+    
+    note over U,API: 整个异步处理流程<br/>避免长时间阻塞<br/>支持断点续传
+    `}
+    />
+
+
+异步处理的实现包含以下关键设计：任务提交后立即返回，不阻塞主流程；轮询间隔采用动态调整策略，初始间隔较短，随着等待时间增加逐渐延长；设置最大轮询次数限制，防止无限等待；异常处理机制确保单次查询失败不会影响整体流程。
+
+### 轮询机制实现
+
+轮询逻辑被封装为独立的子工作流，接收任务ID和API凭证作为输入，调用查询接口获取任务状态。子工作流的设计提高了代码复用性，同时便于独立测试和维护。
+
+主工作流通过条件判断控制轮询的执行。判断条件是检查返回的resultURL字段是否为空。如果为空，继续执行轮询；如果获得有效URL，则结束轮询并进入下一处理阶段。
+
+轮询结果以数组形式累积，每次查询的结果都会添加到数组中。系统使用Python脚本从累积的结果中提取第一个有效的URL。提取逻辑遍历数组元素，检查每个元素的resultURL字段，返回第一个非空值。
+
+![2025-09-25 17.12.49.png](https://s2.loli.net/2025/09/25/NfIMbCs47ijuz2Q.png)
+
+<Mermaid
+  chart={`
+  flowchart TD
+    Start([开始轮询]) --> Init[初始化<br/>任务ID, 轮询次数=0]
+    
+    Init --> CheckCount{轮询次数<br/>< 最大限制?}
+    
+    CheckCount -->|否| Timeout[超时退出]
+    Timeout --> End([结束])
+    
+    CheckCount -->|是| Query[调用子工作流<br/>查询任务状态]
+    
+    Query --> CheckStatus{检查任务状态}
+    
+    CheckStatus -->|处理中| Wait[等待间隔时间]
+    CheckStatus -->|已完成| ExtractURL[提取音频URL]
+    CheckStatus -->|失败| Error[返回错误信息]
+    
+    Wait --> Increment[轮询次数+1<br/>保存查询结果]
+    Increment --> CheckCount
+    
+    ExtractURL --> Success[返回成功结果]
+    Success --> End
+    
+    Error --> End
+    
+    style Start fill:#e8f5e9,stroke:#4caf50,stroke-width:2px
+    style End fill:#ffebee,stroke:#f44336,stroke-width:2px
+    style Success fill:#e3f2fd,stroke:#2196f3,stroke-width:2px
+    style Error fill:#fff3e0,stroke:#ff9800,stroke-width:2px
+    
+    classDef queryNode fill:#f3e5f5,stroke:#9c27b0,stroke-width:2px
+    class Query queryNode
+  `}
+/>
+
+### 异常处理策略
+
+系统在多个关键节点实施了异常处理机制。TTS任务创建节点配置了重试策略，最多重试3次，每次间隔30秒。这种渐进式重试能够应对临时性网络故障或服务不可用的情况。
+
+异常处理还包括降级策略。当重试次数用尽仍然失败时，系统返回预定义的默认值，确保工作流能够继续执行。同时，系统记录详细的错误日志，便于后续问题分析和系统优化。
+
+![2025-09-25 17.14.11.png](https://s2.loli.net/2025/09/25/ZjqCfPGVc7lvIH8.png)
+
+
+## 结论
+
+本项目通过工作流技术成功实现了播客生成的自动化，验证了AI技术在内容创作领域的应用价值。系统的模块化设计、异步处理机制和完善的异常处理策略确保了服务的稳定性和可靠性。
+
+项目经验表明，合理的架构设计和细致的实现是系统成功的关键。工作流不仅是技术实现方式，更是业务逻辑的直观表达。通过持续优化和迭代，系统能够不断提升服务质量，为用户创造更大价值。
