--- a/content/docs/contributing.mdx
+++ b/content/docs/contributing.mdx
@@ -1,17 +1,17 @@
 ---
-title: 贡献
-description: "给 Hello ADP 提供用例"
+title: Contributing
+description: "Share use cases with Hello ADP"
 enableComments: true
 author: "Steven Lynn"
 github_username: "stvlynn"
 x_username: "Stv_Lynn"
 ---
 
-## 贡献用例
+## Submit a Use Case
 
-如果你希望向本项目提交用例，请按以下步骤来进行：
+Follow these steps if you would like to add a new example to the project.
 
-### 1. Fork 本项目
+### 1. Fork the repository
 
 <Cards>
   <Card 
@@ -19,184 +19,169 @@ x_username: "Stv_Lynn"
     href="https://github.com/stvlynn/hello-adp/fork" 
     title="Fork Repository"
   >
-    复刻 Hello ADP
+    Create your own copy of Hello ADP.
   </Card>
 </Cards>
 
-### 2. 拉取复刻项目到本地
+### 2. Clone your fork
 
-Fork 项目后，复制项目的 git 链接，例如 `https://github.com/你的用户名/hello-adp.git`
+After forking, copy the git URL for your repository—for example `https://github.com/<your-username>/hello-adp.git`.
 
 ![image.png](https://s2.loli.net/2025/05/18/PvtSY6hZ4xsO8FN.png)
 
-进入终端，在需要的位置克隆项目，使用以下命令：
+Run the following command in the directory where you want to work:
 
 ```shell
-git clone https://github.com/你的用户名/hello-adp.git
+git clone https://github.com/<your-username>/hello-adp.git
 ```
 
-### 3. 编辑 mdx 文档
+### 3. Edit the MDX content
 
-我们非常推荐你使用 AI 辅助的 IDE 完成文档撰写（例如 Cursor、Windsurf、Cline等）。
+We highly recommend an AI-assisted IDE such as Cursor, Windsurf, or Cline to speed up authoring.
 
-新建窗口，选择目录进入项目。
-
-本项目的目录结构如下：
+Open the project in a new window and review the structure:
 
 ```
-content/                   # 文档内容主目录
-├── docs/                  # 所有文档资源
-│   ├── index.{lang}.mdx   # 首页文档
-│   ├── meta.{lang}.json   # 元数据配置
-│   ├── contributing.{lang}.mdx # 贡献指南
-│   ├── knowledge-base/    # 知识库相关文档
-│   │   ├── meta.{lang}.json    # 知识库板块元数据
-│   │   └── image-retrieval.{lang}.mdx # 图文知识库文档
-│   ├── plugin/            # 插件相关文档
-│   │   ├── meta.{lang}.json    # 插件板块元数据
-│   │   └── ... 各种插件文档
-│   └── workflow/          # 工作流相关文档
-│       ├── meta.{lang}.json    # 工作流板块元数据
-│       ├── node/              # 节点特定文档
-│       │   └── ... 节点相关文档
-│       ├── workflow-chatflow-difference.{lang}.mdx # 工作流和对话流比较
-│       └── twitter-mbti-receipt.{lang}.mdx # Twitter MBTI 案例
+content/                   # Docs root
+├── docs/                  # All documentation resources
+│   ├── index.{lang}.mdx   # Landing page
+│   ├── meta.{lang}.json   # Top-level navigation config
+│   ├── contributing.{lang}.mdx # Contribution guide
+│   ├── knowledge-base/    # Knowledge base docs
+│   │   ├── meta.{lang}.json    # Navigation config
+│   │   └── image-retrieval.{lang}.mdx # Knowledge base example
+│   ├── plugin/            # Plugin docs
+│   │   ├── meta.{lang}.json    # Plugin navigation
+│   │   └── ... individual plugin docs
+│   └── workflow/          # Workflow docs
+│       ├── meta.{lang}.json    # Workflow navigation
+│       ├── node/              # Node reference docs
+│       │   └── ... node topics
+│       ├── workflow-chatflow-difference.{lang}.mdx # Workflow vs. chatflow
+│       └── twitter-mbti-receipt.{lang}.mdx # Twitter MBTI example
 ```
 
-其中，每个文档目录下的结构基本遵循以下原则：
+Each folder follows the same principles:
 
-1. `meta.{lang}.json`文件：控制该目录下的文档在导航菜单中的显示顺序和结构，例如：
+1. `meta.{lang}.json`: controls ordering and structure in the navigation drawer. Example:
    ```json
    {
-       "title": "文档标题",
-       "icon": "图标名称",
+       "title": "Section title",
+       "icon": "remix-icon-name",
        "defaultOpen": true,
        "pages": [
-           "文档名1",
-           "文档名2",
-           "子目录名"
+           "doc-slug-1",
+           "doc-slug-2",
+           "sub-folder"
        ]
    }
    ```
-   本项目使用的图标包是 [RemixIcon](https://remixicon.com/)
+   We use the [Remix Icon](https://remixicon.com/) set throughout the project.
 
-2. 文档文件（`*.mdx`）：实际内容，必须包含frontmatter（文件头部的YAML信息块），例如：
+2. `*.mdx`: the actual document. Always include a frontmatter block at the top:
    ```yaml
    ---
-   title: 文档标题
-   description: 文档描述
+   title: Document title
+   description: Short description
    enableComments: true
-   author: "作者名"
-   github_username: "GitHub用户名"
-   x_username: "X用户名"
+   author: "Your name"
+   github_username: "your-github"
+   x_username: "your-x-account"
    ---
    ```
 
-3. 子目录：更细分的内容类别，每个子目录也需要有自己的`meta.{lang}.json`文件
+3. Subfolders: further organize content. Each subfolder also needs its own `meta.{lang}.json` file.
 
-文档的文件名格式是 `document.{lang}.mdx`
+Document filenames follow the `document.{lang}.mdx` convention.
 
-中文文档为： `document.zh.mdx`
-英文文档为： `document.en.mdx`
-日文文档为： `document.ja.mdx`
+- Chinese: `document.zh.mdx`
+- English: `document.mdx`
+- Japanese: `document.ja.mdx`
 
-#### 多语言化（i18n）
+#### Localization workflow (i18n)
 
-你只需要写一个语言的内容，剩下的可以交给 Cursor 来完成。
+Write one language first and let Cursor handle the rest.
 
-本项目内置了 Cursor rule： `.cursor/rules/i18n.mdc`
+The repo ships with an i18n rule at `.cursor/rules/i18n.mdc`.
 
-你需要通过 `@` 添加 `i8n.mdc` ，以下的 prompt 可以作为参考：
+Summon it with `@i18n.mdc` inside Cursor. A sample prompt:
 
 ```
-帮我把 xxx.{lang}.mdx i8n，翻译为xxx
+Translate xxx.{lang}.mdx into xxx for the remaining locales.
 ```
 
 ![image.png](https://s2.loli.net/2025/05/18/PwH4iSQTJGpLtkv.png)
 
-Cursor rule 中内置了如何配置文件名、`meta.{lang}.json`。
+The rule documents how to name files, update `meta.{lang}.json`, and keep variants in sync.
 
-#### 图片
+#### Images
 
-本项目通过 `next.config.mjs` 控制域名白名单，目前放行的图床是 [sm.ms](https://sm.ms)，方便集中管理图片。
+Image hosting is limited through `next.config.mjs`. We currently allow [sm.ms](https://sm.ms) so assets stay centralized.
 
-如果你使用了其他图片托管方案，请修改 `next.config.mjs`，但依然要遵循统一存放的原则。
+If you prefer a different CDN, update `next.config.mjs` accordingly while keeping assets well organized.
 
-我们强烈建议你在在截图之前将语言设置为英文，方便不同语言的读者阅读。
+We strongly recommend capturing screenshots in English to make cross-language review easier.
 
-### 4. 测试
+### 4. Test locally
 
-在提交之前，请先完成本地测试确保能够正确编译。下面是测试步骤：
+Run the project before opening a PR to make sure everything builds correctly.
 
-#### 安装依赖
-
-首先，确保已安装所有依赖：
+#### Install dependencies
 
 ```bash
-# 使用 npm
+# npm
 npm install
 
-# 或使用 yarn
+# or yarn
 yarn
 ```
 
-#### 本地运行
-
-启动开发服务器查看效果：
+#### Start the dev server
 
 ```bash
-# 使用 npm
+# npm
 npm run dev
 
-# 或使用 yarn
+# or yarn
 yarn dev
 ```
 
-访问 `http://localhost:3000` 检查你的文档是否正确显示。
+Visit `http://localhost:3000` and confirm your docs look good.
 
-#### i18n 完整性检查
+#### Verify i18n completeness
 
-**重要提示**：确保完成所有语言版本的文档。默认情况下，如果没有创建英语（`.mdx`）文件，其他语言的文档都无法通过编译。
+**Important:** every language variant must exist. Without an English (`.mdx`) file, other locales will fail to compile.
 
-必须完成的文件：
+Make sure you have:
 
-1. 英文版本（基础版本）：`document.mdx`
-2. 中文版本：`document.zh.mdx`
-3. 日文版本：`document.ja.mdx`
-4. 各语言的元数据文件：`meta.json`、`meta.zh.json`、`meta.ja.json`
+1. English base file: `document.mdx`
+2. Chinese variant: `document.zh.mdx`
+3. Japanese variant: `document.ja.mdx`
+4. Navigation metadata for each locale: `meta.json`, `meta.zh.json`, `meta.ja.json`
 
-检查方法：
+Check with:
 
-- 运行 `yarn build` 或 `npm run build` 进行构建测试
-- 观察控制台是否有编译错误
-- 常见的错误包括：
-  - 缺失某语言版本的文档
-  - frontmatter格式错误
-  - meta.json中引用了不存在的文档
-  - 图片链接失效
+- `yarn build` or `npm run build`
+- Watch for errors such as missing locale files, malformed frontmatter, mismatched entries in `meta.json`, or broken image URLs.
 
-如果发现编译错误，请根据错误信息修复问题后再提交。
+Inspect every locale in the browser:
+- English: `http://localhost:3000/en/docs/...`
+- Chinese: `http://localhost:3000/zh/docs/...`
+- Japanese: `http://localhost:3000/ja/docs/...`
 
-#### 测试所有语言版本
+All variants should render correctly and convey the same message.
 
-切换不同语言查看文档：
-- 英文版：`http://localhost:3000/en/docs/...`
-- 中文版：`http://localhost:3000/zh/docs/...`
-- 日文版：`http://localhost:3000/ja/docs/...`
+### 5. Submit your changes
 
-确保所有语言版本都能正确显示，并且内容一致。
-
-### 5. 提交
-
-在 IDE 中，点击 <i className="ri-git-fork-line" />，点击 <i class="ri-more-line"></i>，选择 **分支 -> 创建分支**:
+In your IDE, open the Git panel (<i className="ri-git-fork-line" />), click <i className="ri-more-line"></i>, then choose **Branches → Create branch**.
 
 ![2025-05-18 15.55.32.png](https://s2.loli.net/2025/05/18/Vkj1gZ2CQy6iwpX.png)
 
-输入分支名称，如果你只添加了文档，可以叫做 `docs/文档名称`。
+Pick a descriptive branch name such as `docs/<slug>` for documentation-only updates.
 
 ![2025-05-18 15.56.41.png](https://s2.loli.net/2025/05/18/kGMVveXt5DKlBjZ.png)
 
-点击下面的按钮，选择刚刚创建的分支，完成 PR(Pull Request)
+Next, open a pull request with your branch:
 
 <Cards>
   <Card 
@@ -204,15 +189,15 @@ yarn dev
     href="https://github.com/stvlynn/hello-adp/compare" 
     title="Pull Request"
   >
-    创建 PR
+    Create a PR for review.
   </Card>
 </Cards>
 
 ---
 
-## 提交用例或反馈
+## Submit a use case or feedback
 
-如果你希望提交用例，且希望我们来帮助你完成正文的话，可以向本仓库提交Issue。
+If you have an idea but would like us to draft the final copy, open an Issue in this repository.
 
 <Cards>
   <Card 
@@ -220,31 +205,27 @@ yarn dev
     href="https://github.com/stvlynn/hello-adp/issues/new" 
     title="GitHub Issue"
   >
-    向本项目提交用例或反馈
+    Share a use case or request support.
   </Card>
 </Cards>
 
-Issue格式参考如下：
+Use the following template:
 
 ```markdown
-## 标题
-[这里填写用例标题]
+## Title
+[Provide a short title for the use case]
 
-## 描述
-[简单描述这个用例的功能和目的]
+## Description
+[Describe what the workflow or demo accomplishes]
 
-## 项目链接
-[列出项目的链接，比如 Workflow 的 DSL 文件]
+## Project links
+[List any relevant repos, workflow DSL files, or demos]
 
-## 原文链接
-[提供与用例相关的原文、链接或文档，比如项目 README]
+## Source material
+[Attach references such as READMEs or articles]
 
-## 其他信息
-[任何其他需要说明的内容]
+## Additional notes
+[Any other context reviewers should know]
 ```
 
-我们的会评审您提交的Issue，并在接受后为您创建相应的文档。如有问题或需要进一步讨论，请在Issue中留言。
-
-
-
-
+We will review the Issue, follow up with any questions, and publish the documentation after acceptance.
