--- a/content/docs/quickstart.mdx
+++ b/content/docs/quickstart.mdx
@@ -1,66 +1,64 @@
 ---
-title: 快速开始
-description: 不知道从何开始？先读这篇文档吧！
+title: Quickstart
+description: Not sure where to begin? Start here.
 enableComments: true
 author: "Steven Lynn"
 github_username: "stvlynn"
 x_username: "Stv_Lynn"
 ---
 
-## 工作流（Workflow）
+# Application Modes
 
-### 无代码从头构建完整 MVP
+## Standard
+
+## Multi-Agent
+
+## Single Workflow
+
+### Build a production-ready MVP without writing code
 
 <Cards>
-   <Card 
+  <Card 
     href="./workflow/twitter-mbti-receipt" 
-    title="构建MVP：前端与后端"
+    title="Build an MVP: Frontend + Backend"
   >
-  <p>使用Dify和Windsurf的无代码之旅</p>
-    <img src="https://s2.loli.net/2025/05/12/bDNACQq2Stp4L76.png" alt="Twitter MBTI 个性分析" />
-    </Card>
+    <p>No-code journey powered by Dify and Windsurf.</p>
+    <img src="https://s2.loli.net/2025/05/12/bDNACQq2Stp4L76.png" alt="Twitter MBTI analysis" />
+  </Card>
 </Cards>
 
-## 插件（Plugin）
+# Knowledge Base
 
-### 无代码插件开发
+### Retrieval examples
 <Cards>
-   <Card 
-    href="./plugin/ssh-plugin-vibe-coding" 
-    title="使用Cursor构建SSH插件"
-  >
-  <p>无代码方式的服务器管理</p>
-    <img src="https://s2.loli.net/2025/05/12/zK7URIC6a5Fk3Yt.png" alt="使用Cursor构建SSH插件" />
-    </Card>
-    <Card 
-    href="./plugin/cursor-rules" 
-    title="Dify 插件开发的 Cursor Rules"
-  >
-  <p>获取 Dify 插件开发的 Cursor Rules 简化开发流程</p>
-    </Card>
-</Cards>
-
-
-## 知识库（Knowledge Base）
-
-### 知识库召回
-<Cards>
-   <Card 
+  <Card 
     href="./knowledge-base/image-retrieval" 
-    title="图文知识库如何输出图片内容"
+    title="How to output images from a multimodal knowledge base"
   >
-  <p>学习如何在Dify知识库中实现图文混排效果</p>
-    <img src="https://s2.loli.net/2025/05/18/Ew1DeZxc7VAqt6K.png" alt="图文混排的RAG召回示例图" />
-    </Card>
+    <p>Learn how to combine text and images in Dify knowledge base responses.</p>
+    <img src="https://s2.loli.net/2025/05/18/Ew1DeZxc7VAqt6K.png" alt="Mixed media RAG example" />
+  </Card>
 </Cards>
 
-## 贡献
+# More Resources
 
 <Cards>
-   <Card 
-    href="./contributing" 
-    title="如何为Hello Dify做贡献"
+  <Card 
+    href="./knowledge-base/image-retrieval" 
+    title="How to output images from a multimodal knowledge base"
   >
-  <p>了解如何参与贡献文档和示例</p>
-    </Card>
+    <p>Learn how to combine text and images in Dify knowledge base responses.</p>
+    <img src="https://s2.loli.net/2025/05/18/Ew1DeZxc7VAqt6K.png" alt="Mixed media RAG example" />
+  </Card>
+</Cards>
+
+## Contribute
+
+<Cards>
+  <Card 
+    href="./contributing" 
+    title="How to contribute to Hello ADP"
+  >
+    <p>See how to submit new docs and sample workflows.</p>
+  </Card>
 </Cards>
