fix: escape curly braces in markdown code example

--- a/content/docs/workflow/playground/deepresearch.mdx
+++ b/content/docs/workflow/playground/deepresearch.mdx
@@ -214,7 +214,7 @@ Variable aggregation makes it easy to merge results from multiple branches:
 #### Progress messaging
 
 Key stages display reassuring status updates:
-- "Generating research steps for {topic}..."
+- "Generating research steps for \{topic\}..."
 - "Compiling the final report—this takes about one minute..."
 
 #### Confirmation gates
