docs: remove FirstLab branding and update community links

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -9,7 +9,7 @@ x_username: "Stv_Lynn"
 
 ## What Is This?
 
-Hello ADP is a tutorial project created by FirstLab to introduce the fundamentals of the Tencent Cloud Agent Development Platform (ADP). It offers a friendly overview of the platform and points you toward hands-on examples that help you build confidence step by step.
+Hello ADP is a tutorial project to introduce the fundamentals of the Tencent Cloud Agent Development Platform (ADP). It offers a friendly overview of the platform and points you toward hands-on examples that help you build confidence step by step.
 
 Browse the guides, follow the samples, and start your ADP journey today.
 
@@ -18,7 +18,7 @@ Browse the guides, follow the samples, and start your ADP journey today.
 <Cards>
   <Card 
     icon={<i className="ri-discord-fill ri-lg" />} 
-    href="https://discord.gg/PwZDHH4mv3" 
+    href="https://discord.gg/QjqhkHQVVM" 
     title="Discord Community"
   >
     Join our Discord server for the latest ADP updates and discussions.
