--- a/content/docs/index.zh.mdx
+++ b/content/docs/index.zh.mdx
@@ -9,7 +9,7 @@ x_username: "Stv_Lynn"
 
 ## 这是什么？
 
-这是 FirstLab 推出的教程项目，介绍腾讯云智能体开发平台（ADP）的基础知识。它提供了我们平台的概述，作为进一步探索和实践学习的起点。
+这是 Hello ADP，一个介绍腾讯云智能体开发平台（ADP）的基础知识的文档。它提供了我们平台的概述，作为进一步探索和实践学习的起点。
 
 浏览教程，跟随示例，开始您的 ADP 掌握之旅！
 
@@ -18,7 +18,7 @@ x_username: "Stv_Lynn"
 <Cards>
   <Card 
     icon={<i className="ri-discord-fill ri-lg" />} 
-    href="https://discord.gg/PwZDHH4mv3" 
+    href="https://discord.gg/QjqhkHQVVM" 
     title="Discord 频道"
   >
     加入我们的 Discord 社区，了解更多关于 ADP 的信息。
